# ofSerial

./: .gitignore  CMakeLists.txt
example/: main.cpp
include/: ofSerial.h
src/: ofSerial.cpp
